--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==0.12
+Flask
 twitter
 google-cloud-storage
 google-cloud-vision
+# tensorflow==2.0.0a0
 tensorflow_hub
 numpy
 Pillow
@@ -10,3 +11,5 @@ langdetect
 google-cloud-language
 firebase-admin
 matplotlib
+gunicorn==19.3.0
+urllib3==1.24.2
