--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ runtime: custom
 env_variables:
     GOOGLE_APPLICATION_CREDENTIALS: "/key.json"
 
-entrypoint: gunicorn -b :$PORT main:app
+entrypoint: python main.py
 
 runtime_config:
   python_version: 3
