--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,15 @@ Flask
 twitter
 google-cloud-storage
 google-cloud-vision
-# tensorflow==2.0.0a0
+tensorflow
 tensorflow_hub
 numpy
+urllib3
 Pillow
+six
 Werkzeug
 langdetect
 google-cloud-language
 firebase-admin
 matplotlib
 gunicorn==19.3.0
-urllib3==1.24.2
