--- a/app.yaml
+++ b/app.yaml
@@ -1,24 +1,15 @@
+runtime: python
 env: flex
-runtime: custom
-env_variables:
-    GOOGLE_APPLICATION_CREDENTIALS: "/key.json"
-
-entrypoint: python main.py
-
+entrypoint: gunicorn -b :$PORT --timeout 100 main:app
+service: fledge
 runtime_config:
   python_version: 3
 
-manual_scaling:
-  instances: 1
 resources:
   cpu: 1
-  memory_gb: 1
-  disk_size_gb: 10
+  memory_gb: 4
+  disk_size_gb: 15
 
-
-
-
-    
         
 
 
