--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,6 @@
-runtime: python
+runtime: custom
 env: flex
-entrypoint: gunicorn -b :$PORT --timeout 100 main:app
 service: fledge
-runtime_config:
-  python_version: 3
 
 resources:
   cpu: 1
